<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"

>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
         />
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        />
    <EditText
        android:id="@+id/companyid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/companyid"
        />
    <Button
        android:id="@+id/saveperson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveperson"
        />
    <EditText
        android:id="@+id/idcompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/idcompany"
        />
    <EditText
        android:id="@+id/companywork"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/companywork"
        />
    <EditText
        android:id="@+id/companyaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/companyaddress"
        />
    <Button
        android:id="@+id/savecompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/savecompany"
        />

</LinearLayout>
